--- a/Array_creation_routines.ipynb
+++ b/Array_creation_routines.ipynb
@@ -17,9 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -35,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -47,11 +43,13 @@
       ]
      },
      "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,9 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -76,12 +72,12 @@
       ]
      },
      "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
-    "X = np.array([[1,2,3], [4,5,6]], np.int32)\n"
+    "X = np.array([[1,2,3], [4,5,6]], np.int32)"
    ]
   },
   {
@@ -94,9 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -107,18 +101,18 @@
       ]
      },
      "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -129,11 +123,13 @@
       ]
      },
      "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -158,11 +152,13 @@
       ]
      },
      "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,9 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -185,12 +179,12 @@
       ]
      },
      "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
-    "x = np.arange(4, dtype=np.int64)\n"
+    "x = np.arange(4, dtype=np.int64)"
    ]
   },
   {
@@ -203,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -216,11 +208,13 @@
       ]
      },
      "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,9 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -243,12 +235,12 @@
       ]
      },
      "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
-    "x = np.arange(4, dtype=np.int64)\n"
+    "x = np.arange(4, dtype=np.int64)"
    ]
   },
   {
@@ -261,9 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -273,11 +263,13 @@
       ]
      },
      "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,9 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -300,12 +290,12 @@
       ]
      },
      "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
-    "x = np.arange(4, dtype=np.int64)\n"
+    "x = np.arange(4, dtype=np.int64)"
    ]
   },
   {
@@ -325,9 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -336,11 +324,13 @@
       ]
      },
      "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -352,9 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -363,12 +351,12 @@
       ]
      },
      "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
-    "x = [1,2]\n"
+    "x = [1,2]"
    ]
   },
   {
@@ -381,9 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -393,12 +379,12 @@
       ]
      },
      "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
-    "X = np.array([[1, 2], [3, 4]])\n"
+    "X = np.array([[1, 2], [3, 4]])"
    ]
   },
   {
@@ -411,9 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -422,12 +406,12 @@
       ]
      },
      "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
-    "x = [1, 2]\n"
+    "x = [1, 2]"
    ]
   },
   {
@@ -440,9 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -451,12 +433,12 @@
       ]
      },
      "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
-    "x = np.array([30])\n"
+    "x = np.array([30])"
    ]
   },
   {
@@ -469,9 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -483,7 +463,7 @@
     }
    ],
    "source": [
-    "x = np.array([1, 2, 3])\n"
+    "x = np.array([1, 2, 3])"
    ]
   },
   {
@@ -503,9 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -517,11 +495,13 @@
       ]
      },
      "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -533,9 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -556,11 +534,13 @@
       ]
      },
      "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -572,9 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -599,11 +577,13 @@
       ]
      },
      "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -625,9 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -636,12 +614,12 @@
       ]
      },
      "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
-    "X = np.array([[ 0, 1, 2, 3], [ 4, 5, 6, 7], [ 8, 9, 10, 11]])\n"
+    "X = np.array([[ 0, 1, 2, 3], [ 4, 5, 6, 7], [ 8, 9, 10, 11]])"
    ]
   },
   {
@@ -654,9 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -668,11 +644,13 @@
       ]
      },
      "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -687,9 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -700,11 +676,13 @@
       ]
      },
      "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -720,9 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -734,11 +710,13 @@
       ]
      },
      "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -753,9 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -767,11 +743,13 @@
       ]
      },
      "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -783,7 +761,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
